--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,13 +1,5 @@
-/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Rock+Salt&display=swap');
 
-/* Layout container */
-#content {
-  max-width: 1600px;
-  margin: 0 auto;
-}
-
-/* Reset and base font */
 body {
   background-color: #fcfbfb;
   font-family: 'Raleway', Arial, sans-serif;
@@ -16,27 +8,38 @@ body {
   padding: 0;
 }
 
-/* Reset h2 margin */
-h2 {
+#content {
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+h1, h2, h4 {
   margin: 0;
 }
 
-/* Header styling */
 header {
   background-color: rgba(20, 30, 13, 0.7);
+  display: grid;
+  grid-template-columns: 150px auto;
+  align-items: center;
 }
 
-/* Logo spacing */
 #logo_link {
+  justify-self: center;
+  align-self: center;
   padding-top: 5px;
 }
 
-/* Navigation links */
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+
 nav a {
-  text-align: center;
   color: #fcfbfb;
   text-decoration: none;
   padding: 35px;
+  text-align: center;
 }
 
 nav a:hover {
@@ -44,8 +47,187 @@ nav a:hover {
   color: #d9c2a3;
 }
 
-/* Hero image */
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
+}
+
+#hero-box {
+  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+  z-index: -1;
+}
+
 #hero-img {
   width: 100%;
-  height: auto;
-  border-radius: 10p
+  display: block;
+}
+
+#hero-msg {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  text-align: center;
+  margin-top: 100px;
+  color: white;
+}
+
+.home-title {
+  font-family: 'Rock Salt', cursive;
+  font-size: 2.5em;
+}
+
+.button-box {
+  margin-top: 20px;
+}
+
+.book, .join {
+  background-color: #d9c2a3;
+  color: #3e3e3e;
+  text-decoration: none;
+  padding: 10px 25px;
+  font-size: 18px;
+  border-radius: 5px;
+}
+
+.book:hover, .join:hover {
+  background-color: #b89d80;
+}
+
+.home-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 20px;
+  margin: 50px 0;
+}
+
+.card-img, .mountains {
+  width: 100%;
+  display: block;
+  border: 10px solid #d9c2a3;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+
+.rivers-card {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+  text-align: center;
+}
+
+.camping-card {
+  grid-column: 5 / 7;
+  grid-row: 2 / 3;
+  text-align: center;
+}
+
+.rapids-card {
+  grid-column: 8 / 10;
+  grid-row: 2 / 3;
+  text-align: center;
+}
+
+#background {
+  grid-column: 1 / 11;
+  grid-row: 4 / 9;
+  background-color: #d9c2a3;
+  z-index: -2;
+}
+
+.mountains {
+  grid-column: 2 / 7;
+  grid-row: 5 / 8;
+}
+
+.msg {
+  grid-column: 6 / 10;
+  grid-row: 6 / 7;
+  background-color: #6f7364;
+  padding: 35px;
+  color: white;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+
+footer {
+  background-color: #6f7364;
+  padding: 25px 50px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+.social img {
+  width: 40px;
+  margin: 0 10px;
+}
+
+@media screen and (max-width: 900px) {
+  #hero, .home-grid {
+    display: block;
+    height: auto;
+  }
+
+  nav, footer {
+    flex-direction: column;
+  }
+
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+
+  #hero {
+    margin-top: 0;
+  }
+
+  #hero-msg {
+    margin-top: 0;
+  }
+
+  #hero-msg h4 {
+    display: none;
+  }
+
+  #hero-msg h1 {
+    color: #6f7364;
+  }
+
+  .home-title {
+    font-size: 25px;
+  }
+
+  .rivers-card, .camping-card, .rapids-card { 
+    margin: 50px auto;
+    width: 60%;
+  }
+
+  #background {
+    display: none;
+  }
+
+  .mountains, .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  footer {
+    margin-top: 25px;
+  }
+}
